--- a/src/main/resources/templates/post/post-edit.html
+++ b/src/main/resources/templates/post/post-edit.html
@@ -6,58 +6,14 @@
     <title>레시피 등록</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <style>
-        .image-upload {
-            display: flex;
-            align-items: flex-start;
-        }
-        .image-upload .form-control, .image-upload textarea {
-            flex: 3;
-            height: 100%;
-        }
-        .image-upload .upload-btn {
-            flex: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border: 2px dashed #ccc;
-            background-color: #f8f9fa;
-            cursor: pointer;
-            width: 150px;
-            height: 150px;
-            margin-left: 15px;
-            position: relative;
-        }
-        .image-upload .upload-btn img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        .image-upload .upload-btn input[type='file'] {
-            display: none;
-        }
-        .image-upload .upload-btn::before {
-            content: '+';
-            font-size: 2rem;
-            color: #ccc;
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            height: 100%;
-        }
-        .image-upload .upload-btn img + ::before {
-            display: none;
-        }
-    </style>
+    <link href="/css/common.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 <div th:replace="~{layout/header :: header}">Header</div>
 <!-- 전체 레이아웃을 감싸는 컨테이너 -->
-<div class="container mt-5 mb-5">
+<div class="container mt-3 mb-1 post-write">
     <div class="row justify-content-center">
-        <div class="col-md-8">
+        <div class="col-md-12">
 
             <!-- 카드 스타일로 폼 감싸기 -->
             <div class="card shadow-sm">
