--- a/src/main/resources/templates/post/post-view.html
+++ b/src/main/resources/templates/post/post-view.html
@@ -6,55 +6,11 @@
     <title>레시피 상세 보기</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-    <style>
-        .image-container {
-            position: relative;
-            width: 100%;
-            height: 400px; /* 원하는 높이로 설정 */
-            overflow: hidden;
-            background-color: #f8f9fa; /* 이미지가 없는 경우 대비 */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .cropped-image {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            min-height: 100%;
-            min-width: 100%;
-            object-fit: cover; /* 이미지 비율 유지하면서 컨테이너 채우기 */
-        }
-        /* 제목 스타일 */
-        .card-title {
-            font-size: 2rem; /* 제목 크기 */
-            font-weight: bold; /* 굵은 글씨 */
-            color: #333333; /* 어두운 회색 톤 */
-            margin-bottom: 1rem; /* 제목과 콘텐츠 간 간격 */
-        }
-
-        /* 콘텐츠 스타일 */
-        .card-content {
-            font-size: 1rem; /* 기본 텍스트 크기 */
-            line-height: 1.8; /* 줄 간격 */
-            color: #AAAAAA; /* 약간 밝은 회색 톤 */
-            margin-bottom: 1rem; /* 아래 여백 */
-        }
-
-        .square-image {
-            width: 100%;
-            aspect-ratio: 1 / 1; /* 정사각형 비율 유지 */
-            object-fit: cover;   /* 넘치는 부분 자르기 */
-            object-position: center; /* 중앙 정렬 */
-        }
-    </style>
+    <link href="/css/common.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 <div th:replace="~{layout/header :: header}">Header</div>
-    <div class="container mt-5 mb-5">
+    <div class="container mt-3 mb-1 post-view">
         <div class="row justify-content-center">
 
             <!-- 제목 및 소개 카드 -->
@@ -195,7 +151,7 @@
 	});
 
     function goBack() {
-        if (document.referrer && document.referrer.includes('/post/list')) {
+        if (document.referrer && ( document.referrer.includes('/post/list') || document.referrer.includes('/user/myrecipe'))) {
             window.history.back();
         } else {
             window.location.href = '/post/list';
