--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -13,7 +13,7 @@
                 <ul class="nav col-12 col-lg-auto mb-2 justify-content-center mb-md-0">
                     <li>
                         <a href="/" class="px-2 logo-text">
-                            요리왕 비룡
+                            요리왕 이룡
                         </a>
                     </li>
                     <!-- 레시피 메뉴 추가 -->
